--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,18 +6,14 @@ spring:
   cloud:
     gateway:
       routes: # Spring Cloud Gateway의 라우팅 설정
-        - id: order-service # 라우트 식별자
-          uri: lb://order-service # 'order-service'라는 이름으로 로드 밸런싱된 서비스로 라우팅
+        - id: auth-service # 라우트 식별자
+          uri: lb://auth-service # 'auth-service'라는 이름으로 로드 밸런싱된 서비스로 라우팅
           predicates:
-            - Path=/order/**
-        - id: product-service
-          uri: lb://product-service
+            - Path=/api/v1/auth/**
+        - id: delivery-service
+          uri: lb://delivery-service
           predicates:
-            - Path=/products/**
-        - id: auth-service
-          uri: lb://auth-service
-          predicates:
-            - Path=/auth/**
+            - Path=/api/v1/**   # /api/v1/**로 시작하는 모든 요청을 delivery-service로 라우팅
       discovery:
         locator:
           enabled: true # 서비스 디스커버리를 통해 동적으로 라우트를 생성
